# workout_app_backend

./: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
ci/: Jenkinsfile
main/: production.py  settings.py  urls.py
nginx-config/: nginx.default
scripts/: entrypoint.sh
workout_api/: models.py  serializers.py  urls.py  views.py
workout_api/migrations/: 0001_initial.py  0002_rename_born_date_trainee_birth_date_set_comments.py  0003_set_is_bodyweight_set_weight.py
